<resources>
    <string name="app_name">Turismo Tibasosa</string>
    <string name="txtLogin">Login</string>
    <string name="txtUser">Usuario</string>
    <string name="txtRePass">Repetir Contrasena</string>
    <string name="txtPass">Contrasena</string>
    <string name="txtPass2">Contrasena</string>
    <string name="txtEmail">Email</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="btnSign">Registrarse</string>
    <string name="txtRegistro">Registrarse</string>
    <string name="txtLogin2">Login</string>
    <string name="txtEmail2">Email</string>
    <string name="menuover">Perfil</string>
    <string name="menumain">Ventana Principal</string>
    <string name="menu2">Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
