
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fsebasorozco.turismotibasosaapp.LogginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo1"
        android:layout_weight="2.22">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:id="@+id/imageView2"
                android:layout_weight="0.75" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:hint="@string/txtLogin"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25dp"
                android:hint="@string/txtPass"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:id="@+id/txtPass"
                android:layout_gravity="right" />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnIngresar"
                android:textSize="20dp"
                android:id="@+id/btnIngresar"
                android:textColor="@color/red"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.15" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegistro"
                android:id="@+id/btnRegistro"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/blue"
                android:layout_weight="0.15"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
