<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fsebasorozco.turismotibasosaapp.RegistroActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo1"
        android:layout_weight="2.22">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrate aquí"
                android:textSize="35dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUser"
                android:hint="@string/txtUser"
                android:textAlignment="center"
                android:textColorHint="@color/gray"
                android:textSize="20dp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:layout_gravity="right" />
                <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                android:hint="@string/txtPass2"
                android:textStyle="bold"
                android:id="@+id/txtPass"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:hint="@string/txtRePass"
                android:textStyle="bold"
                android:id="@+id/txtRePass"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:hint="@string/txtEmail"
                android:textStyle="bold"
                android:id="@+id/txtEmail"
                android:layout_gravity="right" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSign"
                    android:id="@+id/btnSign"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/blue"
                    android:layout_weight="0.15"
                    android:textAlignment="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancelar"
                    android:id="@+id/btnCancel"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/red"
                    android:layout_weight="0.15"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
